Add basic contact information section

--- a/index.html
+++ b/index.html
@@ -6,5 +6,19 @@
     <title>Your Name - CV/Resume</title>
 </head>
 
-<body></body>
+<body>
+<header>
+    <h1>Daria Rateeva</h1>
+    <section id="contact">
+        <p>
+            <strong>Date of Birth:</strong> 10/06/2004<br>
+            <strong>Location:</strong> Chișinău, Moldova<br>
+            <strong>Email:</strong> <a href="mailto:daria.rateeva@gmail.com">daria.rateeva@gmail.com</a><br>
+            <strong>Phone:</strong> <a href="tel:+37360131686">(+373) 60131686</a><br>
+            <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/daria-rateeva/" target="_blank">Daria Rateeva</a>
+        </p>
+    </section>
+</header>
+</body>
+
 </html>
