--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
         </p>
     </section>
 </header>
+
+<section id="about">
+    <h2>About Me</h2>
+    <p>
+        I am a passionate software engineering student specializing in full-stack development
+        with a strong focus on clean architecture and modern design patterns. I enjoy building
+        scalable applications using ASP.NET Core, Blazor, and Entity Framework, while also
+        exploring cybersecurity and network programming. I aspire to become a specialized
+        full-stack developer who creates maintainable, secure, and high-quality software solutions.
+    </p>
+</section>
+
 </body>
 
 </html>
