Add work experience section

--- a/index.html
+++ b/index.html
@@ -31,6 +31,68 @@
     </p>
 </section>
 
+<section id="experience">
+    <h2>Work Experience</h2>
+
+    <article>
+        <h3>Vice-President</h3>
+        <p>
+            <strong>FAF NGO</strong> - Chișinău, Moldova<br>
+            <em>October 2024 - Present</em>
+        </p>
+        <ul>
+            <li>Promoted to Vice-President after one year as Corporate Relationship Manager</li>
+            <li>Built partnerships with companies to sponsor tech events, doubling both the number of sponsors and overall event budgets</li>
+            <li>Managed all communication with company representatives and organized hackathons, workshops, and IT conferences</li>
+            <li>Developed public speaking and problem-solving skills by serving as event moderator</li>
+        </ul>
+    </article>
+
+    <article>
+        <h3>Process Modeling Specialist - JUMP Internship</h3>
+        <p>
+            <strong>Orange Systems</strong> - Chișinău, Moldova<br>
+            <em>November 20, 2025 - Present</em>
+        </p>
+        <ul>
+            <li>Responsible for UML diagram design and workflow implementation</li>
+            <li>Analyzing and modeling business processes for optimization</li>
+            <li>Collaborating with cross-functional teams to document system architecture</li>
+        </ul>
+    </article>
+
+    <article>
+        <h3>Full-Stack Developer Intern</h3>
+        <p>
+            <strong>Codwer Academy</strong> - Chișinău, Moldova<br>
+            <em>July 2025 - October 2025</em>
+        </p>
+        <ul>
+            <li>Developed two full-stack applications using Blazor, ASP.NET Core, and C#</li>
+            <li>Built a small business helper application with document management, financial reporting, and employee performance tracking</li>
+            <li>Created a classroom booking management system for Technical University of Moldova</li>
+            <li>Implemented Clean Architecture principles and CQRS pattern with MediatR</li>
+            <li>Managed databases using Microsoft SQL Server and Entity Framework Core</li>
+            <li>Built RESTful APIs for frontend-backend communication</li>
+        </ul>
+    </article>
+
+    <article>
+        <h3>Frontend Developer Intern</h3>
+        <p>
+            <strong>S.R.L Complexica</strong> - Chișinău, Moldova<br>
+            <em>September 2024 - October 2024</em>
+        </p>
+        <ul>
+            <li>Developed the frontend of a password manager application using React</li>
+            <li>Implemented user interface and built reusable components</li>
+            <li>Managed application state and integrated frontend with backend APIs</li>
+            <li>Ensured secure password storage functionality</li>
+        </ul>
+    </article>
+</section>
+
+
 </body>
 
 </html>
