Add education section

--- a/index.html
+++ b/index.html
@@ -92,6 +92,54 @@
     </article>
 </section>
 
+<section id="education">
+    <h2>Education</h2>
+
+    <article>
+        <h3>Bachelor of Science - Software Engineering (Honours Programme)</h3>
+        <p>
+            <strong>Technical University of Moldova</strong><br>
+            <em>September 2023 - Present</em><br>
+            Address: Studentilor str. 9/7, Chisinau, Moldova
+        </p>
+        <p>
+            <strong>Favorite courses:</strong> Design Patterns, Cryptography, Network Programming,
+            and System Architecture. I particularly enjoyed the laboratory work on implementing
+            various design patterns and cryptographic algorithms, which helped me understand
+            the theoretical concepts through practical application.
+        </p>
+    </article>
+
+    <article>
+        <h3>Cybersecurity Program - TalTech Summer School</h3>
+        <p>
+            <strong>Tallinn University of Technology (TalTech)</strong><br>
+            <em>July 7, 2025 - July 26, 2025</em><br>
+            Tallinn, Estonia
+        </p>
+        <p>
+            <strong>Memorable experience:</strong> This intensive program provided hands-on
+            experience with cybersecurity tools and techniques. The collaborative environment
+            with international students was incredibly enriching, and I gained practical
+            knowledge in security assessment and ethical hacking.
+        </p>
+    </article>
+
+    <article>
+        <h3>Baccalaureate Diploma</h3>
+        <p>
+            <strong>Private Institute "Columna" Lycceum</strong><br>
+            <em>September 2017 - May 2023</em><br>
+            Address: Alba-Iulia str. 5/2, Chisinau<br>
+            Final Grade: 9.25
+        </p>
+        <p>
+            <strong>Foundation years:</strong> This is where my passion for programming began.
+            The supportive learning environment and dedicated teachers helped me build a strong
+            foundation in mathematics and logical thinking.
+        </p>
+    </article>
+</section>
 
 </body>
 
