--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Name - CV/Resume</title>
+    <meta name="author" content="Rateeva Daria">
+    <title>Rateeva Daria - CV/Resume</title>
 </head>
 
 <body>
@@ -140,6 +141,42 @@
         </p>
     </article>
 </section>
+
+<section id="skills">
+    <h2>Technical Skills</h2>
+
+    <h3>Programming Languages</h3>
+    <ul>
+        <li>Java</li>
+        <li>Python</li>
+        <li>C#</li>
+    </ul>
+
+    <h3>Soft Skills</h3>
+    <ul>
+        <li>Team player</li>
+        <li>Public speaking</li>
+        <li>Problem solving</li>
+    </ul>
+</section>
+
+<section id="languages">
+    <h2>Language Skills</h2>
+    <ul>
+        <li><strong>Romanian:</strong> Native</li>
+        <li><strong>Russian:</strong> Native</li>
+        <li><strong>English:</strong> B2 (Independent user)
+            <ul>
+                <li>Listening: B2</li>
+                <li>Reading: B2</li>
+                <li>Writing: B2</li>
+                <li>Spoken Production: B2</li>
+                <li>Spoken Interaction: B2</li>
+            </ul>
+        </li>
+    </ul>
+</section>
+
 
 </body>
 
