🫂 projects ➕ hackathons sections

--- a/index.html
+++ b/index.html
@@ -176,6 +176,77 @@
         </li>
     </ul>
 </section>
+<section id="projects">
+    <h2>Projects</h2>
+
+    <article>
+        <h3>Small Business Helper</h3>
+        <p>
+            <em>July 2025 - September 2025</em>
+        </p>
+        <p>
+            Built a business management application with document management, financial
+            reporting, and employee performance tracking features. Implemented using Clean
+            Architecture and CQRS pattern with MediatR, Entity Framework Core, and Microsoft
+            SQL Server. Included role-based access controls and RESTful APIs for all operations.
+        </p>
+        <p>
+            <strong>Technologies:</strong> C#, ASP.NET Core, Blazor, Entity Framework Core,
+            MediatR, Microsoft SQL Server
+        </p>
+        <p>
+            <a href="https://github.com/CODWER-Academy/11-testing-DariaRateeva" target="_blank">View on GitHub</a>
+        </p>
+    </article>
+
+    <article>
+        <h3>LockR - Password Manager</h3>
+        <p>
+            <em>September 2024 - October 2024</em>
+        </p>
+        <p>
+            Developed the frontend for LockR, a secure and user-friendly password management
+            web application. Key features include a strong password generator, organized storage
+            with customizable groups, password history tracking, and secure user authentication.
+        </p>
+        <p>
+            <strong>Technologies:</strong> React, JavaScript
+        </p>
+        <p>
+            <a href="https://github.com/diana7376/Password-manager-app-frontend" target="_blank">View on GitHub</a>
+        </p>
+    </article>
+</section>
+
+<section id="hackathons">
+    <h2>Hackathons</h2>
+
+    <article>
+        <h3>Giga Hack 2025</h3>
+        <p>
+            <em>September 12-14, 2025</em>
+        </p>
+        <p>
+            Developed an AgriFood platform designed to collect farmer data and streamline
+            the process for applying to subsidies and grants.
+        </p>
+        <p>
+            <a href="https://github.com/dan1el50/AgriFood-Challenge-GigaHack2025" target="_blank">View on GitHub</a>
+        </p>
+    </article>
+
+    <article>
+        <h3>Conectum - Cybercor Hackathon</h3>
+        <p>
+            <em>March 28-29, 2025</em>
+        </p>
+        <p>
+            Created an AI-powered platform designed to function as a "second brain."
+            It captures, stores, and processes users' fleeting thoughts and small ideas
+            that often fade quickly.
+        </p>
+    </article>
+</section>
 
 
 </body>
